Fix country flag css issue on safari

--- a/public/app/custom-css/css/home/item-cards.css
+++ b/public/app/custom-css/css/home/item-cards.css
@@ -462,11 +462,10 @@ body {
 }
 
 .item-card .bottom .item-detail .logo {
-    float: left;
     display: inline;
     width: 26px;
     height: 16px;
-    margin: 1px 4px 0 0;
+    margin: 0 5px 3px 0;
     border: 1px solid #eee;
     transition: opacity .3s,transform .3s;
 }
