--- a/public/app/custom-css/css/shop/item.css
+++ b/public/app/custom-css/css/shop/item.css
@@ -1498,11 +1498,10 @@ label {
 }
 
 #item-page .top-part .item-title .logo {
-    float: left;
     display: inline;
     width: 30px;
     height: 18px;
-    margin: 2px 6px 0 0;
+    margin: 0 6px 4px 0;
     border: 1px solid #eee;
     transition: opacity .3s,transform .3s;
 }
